--- a/app/churchill/static/less/responsive/phone.less
+++ b/app/churchill/static/less/responsive/phone.less
@@ -21,6 +21,17 @@
         padding: 0.5em;
 
         .mdl-grid {
+            padding: 0.25em 0.5em;
+            background: #FFF;
+        }
+
+        .mdl-list {
+            margin: 0;
+        }
+    }
+
+    .mdl-tabs__panel {
+        .mobile-container {
             padding: 0;
         }
     }
@@ -58,7 +69,7 @@
             width: 35px;
         }
 
-        .quantity {
+        .volume {
             padding: 0;
         }
     }
