--- a/app/churchill/templates/handlebars/shot-type.html
+++ b/app/churchill/templates/handlebars/shot-type.html
@@ -13,8 +13,9 @@
             <button class="mdl-button mdl-js-button mdl-button--icon decrease">
                 <i class="material-icons">remove</i>
             </button>
-            <span class="quantity">
-                <input type="text" name="quantity" value="0" data-type-id="{{ id }}" data-step="1">
+            <span class="volume">
+                <input type="text" name="volume" value="0" data-type-id="{{ id }}" data-step="{{ volume }}">
+                {{ measure }}
             </span>
             <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored increase">
                 <i class="material-icons">add</i>
