--- a/app/churchill/templates/handlebars/shot.html
+++ b/app/churchill/templates/handlebars/shot.html
@@ -31,9 +31,9 @@
             <button class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored increase">
                 <i class="material-icons">add_circle_outline</i>
             </button>
-            <span class="quantity">
-                <input type="text" name="quantity" value="{{ quantity }}"
-                       data-id="{{ id }}" data-type-id="{{ type.id }}" data-step="1">
+            <span class="volume">
+                <input type="text" name="volume" value="{{ volume }}"
+                       data-id="{{ id }}" data-type-id="{{ type.id }}" data-step="{{ step }}">
             </span>
             <button class="mdl-button mdl-js-button mdl-button--icon decrease">
                 <i class="material-icons">remove_circle_outline</i>
