--- a/app/churchill/templates/handlebars/dialogs.html
+++ b/app/churchill/templates/handlebars/dialogs.html
@@ -37,8 +37,8 @@
                                 <button class="mdl-button mdl-js-button mdl-button--icon decrease popular">
                                     <i class="material-icons">remove</i>
                                 </button>
-                                <span class="quantity">
-                                    <input type="text" name="quantity" value="{{ volume }}"
+                                <span class="volume">
+                                    <input type="text" name="volume" value="{{ volume }}"
                                            data-type-id="{{ id }}" data-step="{{ volume }}">
                                     {{ measure }}
                                 </span>
