Add shot type dialog

--- a/app/churchill/templates/handlebars/dialogs.html
+++ b/app/churchill/templates/handlebars/dialogs.html
@@ -12,8 +12,8 @@
                 <i class="material-icons">more_vert</i>
             </button>
             <ul id="shot-type-menu" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="shot-type-button">
-              <li class="mdl-menu__item">Add new shot type</li>
-              <li class="mdl-menu__item">Edit catalog</li>
+              <li class="add-shot-type mdl-menu__item">Add new shot type</li>
+              <li class="edit-favourite mdl-menu__item">Edit catalog</li>
             </ul>
         </div>
     </div>
