--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -58,6 +58,7 @@
         <script src="{% static 'js/shots/shot.view.js' %}"></script>
         <script src="{% static 'js/shots/shot-type.model.js' %}"></script>
         <script src="{% static 'js/shots/shot-type.view.js' %}"></script>
+        <script src="{% static 'js/shots/shot-icon.model.js' %}"></script>
         <script src="{% static 'js/plugins/dialog.js' %}"></script>
         <script src="{% static 'js/common.js' %}"></script>
         <script src="{% static 'js/index.js' %}"></script>
