--- a/app/churchill/static/less/base.less
+++ b/app/churchill/static/less/base.less
@@ -239,6 +239,21 @@ form {
     }
 }
 
+#add-shot-type-form {
+    padding: 0 1em;
+    background: #FFF;
+
+    .mdl-textfield__input {
+        color: rgba(0, 0, 0, 0.26);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    }
+
+    .mdl-textfield__label {
+        color: rgba(0, 0, 0, 0.26);
+    }
+}
+
+
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#330838+0,0d818e+100 */
 .gradient {
     /* Old browsers */
