--- a/app/churchill/templates/handlebars/dialogs.html
+++ b/app/churchill/templates/handlebars/dialogs.html
@@ -37,7 +37,7 @@
                                 <button class="mdl-button mdl-js-button mdl-button--icon decrease popular">
                                     <i class="material-icons">remove</i>
                                 </button>
-                                <span class="volume">
+                                <span class="volume non-nullable">
                                     <input type="text" name="volume" value="{{ volume }}"
                                            data-type-id="{{ id }}" data-step="{{ volume }}">
                                     {{ measure }}
