Add shot type form

--- a/app/churchill/static/less/base.less
+++ b/app/churchill/static/less/base.less
@@ -244,7 +244,7 @@ form {
     background: #FFF;
 
     .mdl-textfield__input {
-        color: rgba(0, 0, 0, 0.26);
+        color: #999;
         border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     }
 
@@ -253,6 +253,29 @@ form {
     }
 }
 
+.icons-grid {
+    justify-content: flex-start;
+
+    .mdl-cell {
+        margin: 0.5em 1.5em 0.5em 0;
+
+        .mdl-radio {
+            padding-left: 1em;
+        }
+    }
+
+    .icon-title {
+        position: relative;
+        top: -11px;
+        height: 1em;
+        overflow: visible;
+
+        .icon-image {
+            height: 1em;
+            overflow: visible;
+        }
+    }
+}
 
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#330838+0,0d818e+100 */
 
