--- a/app/churchill/templates/common/layout.html
+++ b/app/churchill/templates/common/layout.html
@@ -13,7 +13,7 @@
         <link rel="manifest" href="{% static 'manifest.json' %}">
         <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
 
-        <meta name="theme-color" content="#0d818e">
+        <meta name="theme-color" content="#2a264d">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="application-name" content="Churchill">
         <link rel="icon" sizes="192x192" href="{% static 'img/android-desktop.png' %}">
@@ -22,7 +22,7 @@
         <meta name="apple-mobile-web-app-title" content="Churchill">
         <link rel="apple-touch-icon-precomposed" href="{% static 'img/ios-desktop.png' %}">
 
-        <meta name="msapplication-TileColor" content="#0d818e">
+        <meta name="msapplication-TileColor" content="#2a264d">
         <meta name="msapplication-TileImage" content="{% static 'img/ms-desktop.png' %}">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto:300,400,700&subset=cyrillic">
