--- a/app/churchill/static/less/responsive/phone.less
+++ b/app/churchill/static/less/responsive/phone.less
@@ -42,17 +42,13 @@
         opacity: 1;
     }
 
-    .mdl-layout__content {
-        width: 98%;
-    }
-
     .mdl-dialog__title {
         padding: 1rem 1rem 0;
         font-size: 1.8em;
     }
 
     .mdl-dialog__content {
-        padding: 1em 0 0 0;
+        padding: 0;
     }
 
     .mdl-list__item {
