--- a/app/churchill/templates/static/about.html
+++ b/app/churchill/templates/static/about.html
@@ -7,14 +7,14 @@
         <h1>About</h1>
         <p><strong>Churchill</strong> is an application for calculation of individual alcohol consumption.</p>
         <p>This application currently in beta, so no warranties, use at your own risk.</p>
-        <br>
-        <p>Current version: <strong>0.1.5</strong></p>
-        <p>Author: <strong>Alexander Chaika</strong></p>
-        <p>Email: <a href="mailto:manti.by@gmail.com">manti.by@gmail.com</a></p>
-        <p>License:
-            <a href="https://raw.githubusercontent.com/manti-by/Churchill/master/NEW-BSD-LICENSE">
-                NEW BSD LICENSE
-            </a>
+        <p>
+            Current version: <strong>0.3.1</strong><br>
+            Author: <strong>Alexander Chaika</strong><br>
+            Email: <a href="mailto:manti.by@gmail.com">manti.by@gmail.com</a><br>
+            License:
+                <a href="https://raw.githubusercontent.com/manti-by/Churchill/master/NEW-BSD-LICENSE">
+                    NEW BSD LICENSE
+                </a>
         </p>
     </div>
 {% endblock %}
