--- a/app/churchill/static/less/mdl.less
+++ b/app/churchill/static/less/mdl.less
@@ -1,15 +1,3 @@
-.mdl-mini-footer {
-    background: transparent;
-
-    .mdl-mini-footer__link-list {
-        padding-top: 4em;
-        a {
-            padding-right: 1.5em;
-            text-transform: uppercase;
-        }
-    }
-}
-
 .mdl-button {
     &.mdl-button--primary {
         color: @color-primary;
@@ -42,7 +30,11 @@
 }
 
 .mdl-layout__header {
-    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: block;
     background-color: transparent;
 
     .mdl-layout__header-row {
@@ -59,6 +51,33 @@
     .mdl-button {
         &.mdl-button--icon {
             color: #FFF;
+        }
+    }
+}
+
+.mdl-layout__content {
+    position: relative;
+    top: 56px;
+
+    .white-plate {
+        display: flex;
+        height: 100%;
+        color: #333;
+        background: #FFF;
+
+        .mdl-textfield {
+            .mdl-textfield__input {
+                color: #333;
+                border-bottom: 1px solid #CCC;
+            }
+
+            .mdl-textfield__label {
+                color: #333;
+
+                &:after {
+                    background-color: @color-accent;
+                }
+            }
         }
     }
 }
@@ -121,6 +140,10 @@
         .mdl-tabs__tab.is-active:after {
             background: #FFF;
         }
+    }
+
+    .mdl-tabs__tab-bar {
+        padding-top: 1em;
     }
 }
 
