--- a/app/churchill/templates/index.html
+++ b/app/churchill/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     {% include 'shots/list.html' %}
-    <button class="add-shot mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+    <button class="open-add-shot-form mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
         <i class="material-icons">add</i>
     </button>
 {% endblock %}
